# her

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-local.txt  requirements.txt  run.sh  version.yaml
desktop/: launcher.py  setup_app.py
docs/features/: cowork-and-knowledge-wiki.md
scripts/: build-dmg.sh  create-signing-identity.sh  make-icon.sh  sync_version.py
src/her/: __init__.py  config.py  i18n.py  main.py
src/her/agentic/: __init__.py  accessibility.py  calendar.py  email.py  executor.py  macos.py  ocr.py  registry.py  screen.py  tools.py  web.py
src/her/agentic/skills/: __init__.py  compiler.py  compiler_text.py  recorder.py  runtime.py  store.py  tools.py
src/her/ast/: __init__.py  capture.py  consolidate.py  dataset.py  eval.py  manager.py  provider.py  redact.py  retrieval.py  router.py  store.py  style.py  trainer.py
src/her/core/: env_settings.py  event_bus.py  orchestrator.py  preferences.py  scheduler.py  state.py  usage.py
src/her/cowork/: __init__.py  client.py  skills_store.py  tools.py
src/her/memory/: character.py  collector.py  recall.py  store.py  summarizer.py  visual_collector.py
src/her/memory/wiki/: __init__.py  engine.py  store.py  tools.py  uploads.py
src/her/perception/: location.py  vision_capture.py  vision_scene.py  world_model.py
src/her/reasoning/: empathy.py  instructions.py  local_session.py  realtime_session.py  text_backend.py
src/her/server/: app.py  ws.py
src/her/ui/static/: app.js  index.html  mic-worklet.js  style.css
tests/: test_ast.py  test_cowork_wiki.py  test_empathy.py  test_registry.py  test_scheduler.py
