[project]
name = "her"
version = "0.2.0"
description = "A Her-like virtual assistant: multimodal, proactive, naturally voiced."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michele Sblendorio" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "numpy>=1.26",
    "pillow>=10.4",
    "httpx>=0.27",
    # Vision (Moondream local)
    "torch>=2.4",
    # transformers 5.x renamed internal `_tied_weights_keys` -> `all_tied_weights_keys`,
    # which breaks vikhyatk/moondream2 remote code. Keep on the 4.x line.
    "transformers>=4.46,<5",
    "einops>=0.8",
    "accelerate>=1.1",
    # Agentic: web search (no API key needed)
    "ddgs>=6.0",
    # Accessibility mode: on-device screen OCR via Apple Vision framework.
    "pyobjc-framework-Vision>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-EventKit>=10.3; sys_platform == 'darwin'",
    # Optional: V-JEPA real integration (kept commented, see world_model.py)
    # "timm>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
her = "her.main:main"
her-forget = "her.memory.store:forget_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/her"]

[tool.ruff]
line-length = 100
target-version = "py311"
