[project]
name = "her"
# Version is the single source of truth in version.yaml (read by hatchling
# below). Do not hardcode it here.
dynamic = ["version"]
description = "A Her-like virtual assistant: multimodal, proactive, naturally voiced."
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Michele Sblendorio" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    # Multipart parsing for file uploads (UploadFile in /api/upload).
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "numpy>=1.26",
    "pillow>=10.4",
    "httpx>=0.27",
    # Cowork + knowledge wiki: delegate to Claude and author Agent Skills.
    "anthropic>=0.49",
    # Knowledge-wiki file uploads: extract text from .docx for Opus to ingest.
    "python-docx>=1.1",
    # Vision (Moondream local)
    "torch>=2.4",
    # transformers 5.x renamed internal `_tied_weights_keys` -> `all_tied_weights_keys`,
    # which breaks vikhyatk/moondream2 remote code. Keep on the 4.x line.
    "transformers>=4.46,<5",
    "einops>=0.8",
    "accelerate>=1.1",
    # Agentic: web search (no API key needed)
    "ddgs>=6.0",
    # Skill learning: global mouse/keyboard event capture during recording.
    # Requires macOS Accessibility permission at runtime.
    "pynput>=1.7",
    # Accessibility mode: on-device screen OCR via Apple Vision framework.
    "pyobjc-framework-Vision>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-EventKit>=10.3; sys_platform == 'darwin'",
    "pyobjc-framework-CoreLocation>=10.3; sys_platform == 'darwin'",
    # Desktop wrapper: native macOS window that hosts the local UI.
    "pywebview>=5.0; sys_platform == 'darwin'",
    # Optional: V-JEPA real integration (kept commented, see world_model.py)
    # "timm>=1.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7", "pytest>=8.3", "pytest-asyncio>=0.24"]
# Build-time tools for producing the Her.app + DMG via desktop/setup_app.py.
desktop = ["py2app>=0.28"]
# Free, on-device backends (VOICE_BACKEND=local / LLM_BACKEND=local). The LLM
# itself runs in a separate Ollama server; these are the local STT/TTS/VAD libs.
# kokoro-onnx bundles espeak-ng (no system install) and supports Python 3.13.
local = [
    "faster-whisper>=1.0",   # speech-to-text (CTranslate2)
    "kokoro-onnx>=0.4",      # text-to-speech (Kokoro 82M, 24 kHz, ONNX runtime)
    "webrtcvad-wheels>=2.0", # turn detection (prebuilt wheels)
    "soundfile>=0.12",       # audio I/O
]

[project.scripts]
her = "her.main:main"
her-forget = "her.memory.store:forget_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Read the version from version.yaml (the single source of truth) rather than a
# literal in [project]. hatchling's regex source applies the pattern below to
# the file and captures the named `version` group.
[tool.hatch.version]
path = "version.yaml"
pattern = "version:\\s*['\"]?(?P<version>[^'\"\\s]+)"

[tool.hatch.build.targets.wheel]
packages = ["src/her"]

[tool.ruff]
line-length = 100
target-version = "py311"
